# otus-smarthouse

./: .gitignore  README.md  cargo.toml
patterns/examples/: builder.rs  metric.rs  newtype.rs  price.rs
patterns/src/: builder.rs  decorator.rs  lib.rs  newtype.rs  visitor.rs
py_socket/: Cargo.toml  README.md  pyproject.toml
py_socket/examples/: smartsocket.py
py_socket/src/: lib.rs
smarthouse/: Cargo.toml
smarthouse/examples/: client.rs  reports.rs  server.rs  socket.rs  thermo.rs
smarthouse/src/: clients.rs  devices.rs  home.rs  lib.rs  rooms.rs
smarthouse_web/: Cargo.toml
smarthouse_web/src/: main.rs
socket_bin_async/: Cargo.toml
socket_bin_async/src/: main.rs
socket_gui/: Cargo.toml
socket_gui/src/: main.rs
socket_lib/: Cargo.toml
socket_lib/examples/: use_socket.rs
socket_lib/src/: lib.rs
socket_lib_async/: Cargo.toml
socket_lib_async/examples/: use_socket_async.rs
socket_lib_async/src/: lib.rs
tcp/: Cargo.toml
tcp/examples/: client.rs  server.rs
tcp/src/: client.rs  errors.rs  lib.rs  protocol.rs  server.rs
thermo_bin_async/: Cargo.toml
thermo_bin_async/src/: main.rs
thermo_lib/: Cargo.toml
thermo_lib/examples/: use_thermo.rs
thermo_lib/src/: lib.rs
thermo_lib_async/: Cargo.toml
thermo_lib_async/examples/: use_thermo_async.rs
thermo_lib_async/src/: lib.rs
