[package]
name = "py_socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pysocket"
crate-type = ["cdylib", "staticlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
socket_lib = { path="../socket_lib" }
thiserror = "1.0.50"
