[package]
name = "smarthouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4"] }

thermo_lib = { path = "../thermo_lib"}
socket_lib = { path = "../socket_lib"}
