[package]
name = "smarthouse_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde = { version = "1.0.189", features = ["derive"] }

smarthouse = {path = '../smarthouse'}
log = "0.4.20"
