[package]
name = "socket_bin_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket_lib = { path = "../socket_lib" }
tokio = { version = "1.32.0", features = ["net", "macros", "rt-multi-thread", "io-util", "time", "sync"] }
