[package]
name = "socket_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10.0"
serde = { version = "1.0.190", features = ["derive"] }

# smarthouse = {path = '../smarthouse'}
socket_lib = {path = '../socket_lib'}
